[package]
name = "rust_api"
version = "0.1.0"
edition = "2021"  # <-- Важно!

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "macros"]}
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }